--- a/PracticeTwo/Properties/launchSettings.json
+++ b/PracticeTwo/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "WeatherForecast",
+      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5264",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
