--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,dotnetcore
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,dotnetcore
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,dotnetcore
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,dotnetcore
 
 ### DotnetCore ###
 # .NET Core build folders
@@ -43,4 +43,23 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,dotnetcore
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,dotnetcore
